--- a/src/styles/desktopMenu.scss
+++ b/src/styles/desktopMenu.scss
@@ -5,6 +5,10 @@
     border: 1px solid var(--very-light-pink);
     border-radius: 6px;
     padding: 20px 20px 0 20px;
+    position: absolute;
+    right: 50px;
+    top: 60px;
+    background-color: white;
 }
 
 .desktop-menu ul {
