feat: add My order details to header and modify styles also added use of useContext

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -53,7 +53,7 @@ nav {
 .navbar-shopping-cart {
 	position: relative;
 }
-.navbar-shopping-cart div {
+.navbar-shopping-cart .cart-counter {
 	width: 16px;
 	height: 16px;
 	background-color: var(--hospital-green);
