--- a/src/styles/myOrderDetails.scss
+++ b/src/styles/myOrderDetails.scss
@@ -5,7 +5,10 @@
     padding: 24px;
     box-sizing: border-box;
     position: absolute;
-    right: 0;
+    top: 44px;
+    right: -6px;
+    background-color: white;
+    border: 1px solid var(--very-light-pink);
 }
 
 .title-container {
@@ -90,6 +93,19 @@
 
 @media (max-width: 640px) {
     .product-detail {
-        width: 100%;
+        width: 260px;
+    }
+    .shopping-cart figure{
+        display: none;
+    }
+    .shopping-cart p:nth-child(2) {
+        color: var(--very-light-pink);
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        max-width: 80px;
+    }
+    .shopping-cart{
+        grid-template-columns: auto 1fr;
     }
 }
