fix: styles wrong  behavior

--- a/src/styles/notFound.scss
+++ b/src/styles/notFound.scss
@@ -1,6 +1,6 @@
 @import url("./global.css");
 
-h1{
+.notFoundTitle{
     display: grid;
     place-content: center;
     height: calc(100vh - 61px - 133px);
